<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dregrado"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gameTimer"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timerTextView1"
        android:layout_marginTop="142dp"
        android:background="@drawable/white_box"
        android:text="@string/tiempo_para_tu_sig_movimiento_00_10"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/timerTextView1"
        android:background="@drawable/white_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/playerOneLayout"
        android:text="@string/es_turno_del_jugador_1"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        tools:ignore="NotSibling" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/timerTextView1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/playerOneLayout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/white_box"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerOneName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/jugador_1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ximage" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/playerTwoLayout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/white_box"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerTwoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/jugador_2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/oimage" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timerTextView"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:id="@+id/image1"
                android:layout_weight="1"
                android:background="@drawable/white_box"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:id="@+id/image2"
                android:layout_weight="1"
                android:background="@drawable/white_box"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:id="@+id/image3"
                android:layout_weight="1"
                android:background="@drawable/white_box"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:id="@+id/image4"
                android:layout_weight="1"
                android:background="@drawable/white_box"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:id="@+id/image5"
                android:layout_weight="1"
                android:background="@drawable/white_box"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:id="@+id/image6"
                android:layout_weight="1"
                android:background="@drawable/white_box"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:id="@+id/image7"
                android:layout_weight="1"
                android:background="@drawable/white_box"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:id="@+id/image8"
                android:layout_weight="1"
                android:background="@drawable/white_box"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:id="@+id/image9"
                android:layout_weight="1"
                android:background="@drawable/white_box"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"/>

        </LinearLayout>

        <!-- Agrega estos dos TextView para mostrar los contadores -->
        <TextView
            android:id="@+id/playerOneWins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_box"
            android:layout_below="@id/playerOneLayout"
            android:layout_centerHorizontal="true"
            android:text="@string/victorias_jugador_1_0"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/playerTwoWins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/playerTwoLayout"
            android:layout_centerHorizontal="true"
            android:background="@drawable/white_box"
            android:text="Victorias Jugador 2: 0"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"/>


    </LinearLayout>
</RelativeLayout>
